# XYUnionAuthNeo

./: .gitignore  Dockerfile  README.md  example.env  main.py  pyproject.toml
config/: __init__.py
configs/: __init__.py  abac.conf
models/: __init__.py  application.py  casbin.py  perm.py  resources.py  user.py
routers/: __init__.py  application_manager.py  policies_manager.py  user.py
routers/application/: __init__.py
utils/: __init__.py  auth.py  database.py  enforcer.py
utils/auth/: __init__.py  base.py  sign.py
utils/dependencies/: __init__.py  application.py  user.py
