[tool.poetry]
name = "xyunionauthneo"
version = "0.0.1"
description = ""
authors = ["XYCode Kerman <xycode-xyc@outlook.com>"]
license = "GPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
fastapi = {extras = ["full"], version = "^0.110.2"}
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
asyncer = "^0.0.5"
casbin-redis-watcher = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
